# django-first-app

./: .gitignore  README.md  django_mysite_settings_envs.sh  lesson02-db-api.md  pyproject.toml
infra/docker/apache-httpd-mod-wsgi/: Dockerfile  new.httpd.conf
infra/docker/apache-httpd-mode-wsgi/: Dockerfile
infra/docker/django-mysite-polls/: Dockerfile  httpd.conf
infra/docker/django-polls-apache/: Dockerfile  django_first_app-0.2.0-py3-none-any.whl  pyproject.toml
infra/docker/django-polls-nginx-static/: Dockerfile
infra/terraform/exec/: main.tf
infra/terraform/local/exec/: main.tf
mysite/: settings.py  urls.py
polls/: admin.py  models.py  test.py  urls.py  urls__without_generic_views_implementation.py  views.py  views__without_generic_views_implementation.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
templates/admin/: base_site.html
