[tool.poetry]
name = "django-first-app"
version = "0.1.0"
description = "Project to follow the django tutorial https://docs.djangoproject.com/en/4.1/intro/tutorial01/"
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]
readme = "README.md"
packages = [{include = "django_first_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
