[tool.poetry]
name = "django-first-app-deploy"
version = "{{DJANGO_PROJECT_VERSION}}"
description = "Project to follow the django tutorial https://docs.djangoproject.com/en/4.1/intro/tutorial01/"
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]
readme = "README.md"
packages = [{include = "django_first_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2 = "^2.9.5"
django-first-app = { file = "django_first_app-{{DJANGO_PROJECT_VERSION}}-py3-none-any.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
